# django-stripe

test_stripe/: .env.dev  Dockerfile  build.sh  docker-compose.yml  pyproject.toml
test_stripe/src/: db.sqlite3
test_stripe/src/apps/products/: admin.py  models.py  views.py
test_stripe/src/apps/products/migrations/: 0001_initial.py  0002_alter_item_price.py
test_stripe/src/config/: settings.py  urls.py
test_stripe/src/templates/: cancel.html  landing.html
test_stripe/tests/: test_test_stripe.py
