[tool.poetry]
name = "test_stripe"
version = "0.1.0"
description = ""
authors = ["RenegadeLoss <renegadeloss696@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.6"
stripe = "^5.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
